--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -21,9 +21,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.4",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.0.17"
+    "mongoose": "^5.2.1",
+    "morgan": "^1.9.0"
   }
 }
