--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
+    "concurrently": "^3.6.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
-    "mongoose": "^5.0.17"
+    "mongoose": "^5.0.17",
+    "morgan": "^1.9.0"
   }
 }
