--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -25,6 +25,8 @@
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "react-browser-router": "^2.1.2",
+    "react-router-dom": "^4.3.1"
   }
 }
