--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "react-browser-router": "^2.1.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "underscore": "^1.9.1"
   }
 }
