--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "react-browser-router": "^2.1.2",
