--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "react-browser-router": "^2.1.2",
     "react-router-dom": "^4.3.1",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "uploadcare-widget": "^3.5.1"
   }
 }
