--- a/pic-me-react/package.json
+++ b/pic-me-react/package.json
@@ -34,8 +34,10 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.14.3",
     "react-browser-router": "^2.1.2",
     "react-router-dom": "^4.3.1",
+    "tooltip.js": "^1.2.0",
     "underscore": "^1.9.1",
     "uploadcare-widget": "^3.5.1"
   }
