--- a/pic-me-react/client/package.json
+++ b/pic-me-react/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
+    "react-router-dom": "^4.1.2",
     "uploadcare-widget": "^3.5.1"
   },
   "scripts": {
